# DataLogger

./: .gitignore  CMakeLists.txt  Info.plist  README.md  Utils.cpp  Utils.h  chart.cpp  chart.h  conanfile.txt  deviceinfo.cpp  deviceinfo.h  devices.cpp  devices.h  logger.cpp  logger.h  logger.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  serviceinfo.cpp  serviceinfo.h  settings.ui  style-dark.qss  style-light.qss  style.qrc  style.qss  utils.cpp  win.rc
config/: config.xml
resources/: logo.ai
resources/images/: datalogger.icns
scripts/: requirements.txt  styles.qrc  theme_export.py
widgets/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  channelwidget.cpp  channelwidget.h  channelwidget.ui  listwidget.cpp  listwidget.h  listwidget.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  statusbarindicator.cpp  statusbarindicator.h  statusbarindicator.ui
